--- a/SpikaEnterprise/res/layout/item_thread_photo.xml
+++ b/SpikaEnterprise/res/layout/item_thread_photo.xml
@@ -33,13 +33,15 @@
                 android:textSize="14sp"
                 tools:text="Stiven Spilberg" />
 
-            <com.clover.spika.enterprise.chat.views.RoundCornersImageView
+            <ImageView
                 android:id="@+id/image_view_photo"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="50dp"
                 android:layout_below="@id/text_view_user"
                 android:layout_centerInParent="true"
-                android:padding="5dp" />
+                android:layout_marginBottom="5dp"
+                android:padding="5dp"
+                android:scaleType="centerCrop" />
 
         </RelativeLayout>
 
