--- a/SpikaEnterprise/res/layout/item_person.xml
+++ b/SpikaEnterprise/res/layout/item_person.xml
@@ -48,14 +48,24 @@
                 tools:text="pero" />
         </LinearLayout>
 
-        <RelativeLayout
+        <!-- <RelativeLayout
             android:id="@+id/imageLayoutControl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/imageLayout"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@id/imageLayout"
-            android:background="@drawable/icon_tablearrow"/>
+            android:background="@drawable/icon_tablearrow"/> -->
+        
+        <ImageView
+            android:id="@+id/imageCheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:src="@android:drawable/checkbox_on_background"/>
+        
     </RelativeLayout>
 
 </RelativeLayout>
