create room bug fix, activate/deactivate, delete room, admin rigths

--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -171,6 +171,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="right"
+                android:scaleType="centerCrop"
                 android:contentDescription="@null" />
 
             <RelativeLayout
