--- a/SpikaEnterprise/res/layout/fragment_create_room.xml
+++ b/SpikaEnterprise/res/layout/fragment_create_room.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/img_room"
             android:layout_toEndOf="@+id/img_room"
-            android:hint="Enter room name"
+            android:hint="@string/enterRoomName"
             android:layout_centerVertical="true"/>
         
     </RelativeLayout>
@@ -55,6 +55,7 @@
             android:layout_toStartOf="@+id/searchBtn"
             android:layout_centerVertical="true"
             android:hint="@string/searchUsers"
+            android:textColorHint="@color/white"
             android:imeOptions="actionSearch"
             android:cursorVisible="true"
             android:inputType="text"
