--- a/SpikaEnterprise/res/layout/fragment_lobby.xml
+++ b/SpikaEnterprise/res/layout/fragment_lobby.xml
@@ -17,8 +17,8 @@
             android:layout_weight="1"
             android:background="@drawable/selector_toggle_tab"
             android:textColor="@drawable/selector_tab_toggle"
-            android:textOff="Users"
-            android:textOn="Users" />
+            android:textOff="@string/users"
+            android:textOn="@string/users" />
 
         <ToggleButton
             android:id="@+id/usersTab"
@@ -27,8 +27,8 @@
             android:layout_weight="1"
             android:background="@drawable/selector_toggle_tab"
             android:textColor="@drawable/selector_tab_toggle"
-            android:textOff="Groups"
-            android:textOn="Groups" />
+            android:textOff="@string/groups"
+            android:textOn="@string/groups" />
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
