create room fix bugs

--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -341,7 +341,7 @@
     <TextView android:id="@+id/tvSeenBy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#00ff00"
+        android:textColor="@color/devil_gray"
         android:layout_marginLeft="10dp"
         android:textSize="13sp"
         android:visibility="visible"/>
