--- a/SpikaEnterprise/res/layout/fragment_create_room.xml
+++ b/SpikaEnterprise/res/layout/fragment_create_room.xml
@@ -36,6 +36,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/room"
         android:ems="13"
+        android:lineSpacingExtra="5dp"
+        android:layout_margin="10dp"
+        android:textColor="@color/text_blue"
         />
     
     <RelativeLayout 
@@ -55,7 +58,7 @@
             android:layout_toStartOf="@+id/searchBtn"
             android:layout_centerVertical="true"
             android:hint="@string/searchUsers"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/devil_gray"
             android:imeOptions="actionSearch"
             android:cursorVisible="true"
             android:inputType="text"
