--- a/SpikaEnterprise/res/layout/fragment_invite_users.xml
+++ b/SpikaEnterprise/res/layout/fragment_invite_users.xml
@@ -29,5 +29,15 @@
         android:scrollbars="none"
         android:scrollingCache="false"
         android:smoothScrollbar="true" />
+    
+    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+        android:id="@+id/noItems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_items"
+        android:textColor="@color/default_blue"
+        android:textSize="30sp"
+        android:visibility="gone" />
 
 </LinearLayout>
