--- a/SpikaEnterprise/res/layout/layout_search_actionbar.xml
+++ b/SpikaEnterprise/res/layout/layout_search_actionbar.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/actionBarLayout"
     android:layout_width="match_parent"
     android:layout_height="@dimen/menu_height"
@@ -37,34 +35,27 @@
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
-    <LinearLayout
-        android:id="@+id/invitationOptions"
+    <ImageButton
+        android:id="@+id/inviteBtn"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/searchBtn"
+        android:background="@drawable/selector_transp_blue"
+        android:contentDescription="@null"
+        android:padding="10dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/confirm_btn" />
+
+    <ImageButton
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/inviteBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/selector_transp_blue"
-            android:contentDescription="@null"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/confirm_btn" />
-
-        <ImageButton
-            android:id="@+id/searchBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/selector_transp_blue"
-            android:contentDescription="@null"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/icon_search" />
-    </LinearLayout>
+        android:background="@drawable/selector_transp_blue"
+        android:contentDescription="@null"
+        android:padding="10dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/icon_search" />
 
     <ImageButton
         android:id="@+id/close_search"
@@ -86,7 +77,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@id/close_search"
-        android:layout_toRightOf="@id/hackView"
+        android:layout_toRightOf="@id/goBack"
         android:imeOptions="actionSearch"
         android:inputType="text"
         android:singleLine="true"
