--- a/SpikaEnterprise/res/layout/activity_invite_people.xml
+++ b/SpikaEnterprise/res/layout/activity_invite_people.xml
@@ -96,14 +96,15 @@
             android:textColor="@color/white"
             android:visibility="gone" />
     </RelativeLayout>
-
+    
     <TextView
         android:id="@+id/invitedPeople"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textColor="@color/text_time_gray"
-        android:textSize="12sp" />
+        android:lineSpacingExtra="5dp"
+        android:layout_margin="10dp"
+        android:textColor="@color/text_blue"
+        android:ems="13"/>
 
     <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
         android:id="@+id/main_list_view"
