--- a/SpikaEnterprise/res/layout/layout_search_actionbar.xml
+++ b/SpikaEnterprise/res/layout/layout_search_actionbar.xml
@@ -35,27 +35,34 @@
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
-    <ImageButton
-        android:id="@+id/inviteBtn"
+    <LinearLayout
+        android:id="@+id/invitationOptions"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/searchBtn"
-        android:background="@drawable/selector_transp_blue"
-        android:contentDescription="@null"
-        android:padding="10dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/confirm_btn" />
-
-    <ImageButton
-        android:id="@+id/searchBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:background="@drawable/selector_transp_blue"
-        android:contentDescription="@null"
-        android:padding="10dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/icon_search" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/inviteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/confirm_btn" />
+
+        <ImageButton
+            android:id="@+id/searchBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_search" />
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/close_search"
@@ -77,7 +84,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@id/close_search"
-        android:layout_toRightOf="@id/goBack"
+        android:layout_toRightOf="@id/hackView"
         android:imeOptions="actionSearch"
         android:inputType="text"
         android:singleLine="true"
