--- a/SpikaEnterprise/res/layout/fragment_profile.xml
+++ b/SpikaEnterprise/res/layout/fragment_profile.xml
@@ -7,12 +7,13 @@
 
     <com.clover.spika.enterprise.chat.views.RoundImageView
         android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/circle_with_white_border"
-        tools:src="@drawable/default_user_image" />
+        android:scaleType="center"
+        tools:src="@drawable/white_circle" />
 
     <ImageView
         android:id="@+id/addPhoto"
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@id/profileImage"
         android:layout_alignTop="@id/profileImage"
+        android:layout_marginRight="-25dp"
         android:background="@drawable/add_photo"
         android:contentDescription="@null" />
 
@@ -28,7 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/profileImage"
-        android:layout_margin="20dp"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="45sp"
