--- a/SpikaEnterprise/res/layout/fragment_invite_users.xml
+++ b/SpikaEnterprise/res/layout/fragment_invite_users.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="5dp"
-        android:layout_margin="10dp"
+        android:padding="10dp"
         android:textColor="@color/text_blue"
         android:ems="13"/>
 
