add line below create room

--- a/SpikaEnterprise/res/layout/fragment_create_room.xml
+++ b/SpikaEnterprise/res/layout/fragment_create_room.xml
@@ -30,6 +30,11 @@
         
     </RelativeLayout>
     
+    <View android:background="@color/chat_menu_gray"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/room"/>
+    
     <TextView 
         android:id="@+id/txtUserNames"
         android:layout_width="match_parent"
