--- a/SpikaEnterprise/res/layout/in_app_notification_layout.xml
+++ b/SpikaEnterprise/res/layout/in_app_notification_layout.xml
@@ -1,29 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/notificationLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@color/notification_shadow" >
 
-    <View
-        android:id="@+id/paddingTopView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-
-    <RelativeLayout
-        android:id="@+id/notificationLayout"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/msgPop"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/paddingTopView"
-        android:background="@color/notification_shadow"
-        android:visibility="gone" >
-
-        <TextView
-            android:id="@+id/msgPop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:padding="10dp"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-    </RelativeLayout>
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
 </RelativeLayout>
