--- a/SpikaEnterprise/res/values/color.xml
+++ b/SpikaEnterprise/res/values/color.xml
@@ -26,6 +26,7 @@
     <color name="cloud_color">#9ecadc</color>
     <color name="text_gray_image">#7e7e7e</color>
     <color name="devil_gray">#666666</color>
+    <color name="light_light_gray">#eeeeee</color>
 
     <!-- Enterprise style -->
     <color name="default_blue">#3E92D7</color>
