--- a/SpikaEnterprise/res/layout/fragment_invite_users.xml
+++ b/SpikaEnterprise/res/layout/fragment_invite_users.xml
@@ -11,6 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="5dp"
+         android:maxLines="4"
+        android:gravity="bottom"
+        android:scrollbars="vertical"
         android:padding="10dp"
         android:textColor="@color/text_blue"
         android:ems="13"/>
