--- a/SpikaEnterprise/res/layout/activity_invite_people.xml
+++ b/SpikaEnterprise/res/layout/activity_invite_people.xml
@@ -102,6 +102,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="5dp"
+        android:maxLines="4"
+        android:gravity="bottom"
+        android:scrollbars="vertical"
         android:layout_margin="10dp"
         android:textColor="@color/text_blue"
         android:ems="13"/>
