--- a/SpikaEnterprise/res/layout/fragment_profile_group.xml
+++ b/SpikaEnterprise/res/layout/fragment_profile_group.xml
@@ -7,8 +7,8 @@
 
     <com.clover.spika.enterprise.chat.views.RoundImageView
         android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/circle_with_white_border"
