--- a/SpikaEnterprise/res/values/global_app_settings.xml
+++ b/SpikaEnterprise/res/values/global_app_settings.xml
@@ -4,5 +4,9 @@
     <!-- when true, application will ask the user if he/she wants to compress the image
         before sending it -->
     <bool name="send_compressed_images">true</bool>
+
+    <!-- when true, global encryption will be enabled; this means that all data
+        transmitted by this app will be encrypted -->
+    <bool name="enable_global_encryption">true</bool>
     
 </resources>
