--- a/SpikaEnterprise/res/layout/activity_create_room.xml
+++ b/SpikaEnterprise/res/layout/activity_create_room.xml
@@ -52,6 +52,18 @@
             android:text="@string/create"
             android:textSize="16sp"
             android:visibility="gone" />
+        
+        <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+            android:id="@+id/nextRoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textColor="@color/white"
+            android:padding="10dp"
+            android:text="@string/next"
+            android:textSize="16sp"
+            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/close_search"
