--- a/SpikaEnterprise/res/layout/sidebar_layout.xml
+++ b/SpikaEnterprise/res/layout/sidebar_layout.xml
@@ -111,7 +111,7 @@
                 android:layout_gravity="left"
                 android:background="@drawable/selector_transp_blue"
                 android:clickable="true"
-                android:drawableLeft="@drawable/icon_groups"
+                android:drawableLeft="@drawable/icon_door"
                 android:drawablePadding="10dp"
                 android:gravity="left"
                 android:padding="10dp"
@@ -141,7 +141,7 @@
                 android:layout_gravity="left"
                 android:background="@drawable/selector_transp_blue"
                 android:clickable="true"
-                android:drawableLeft="@drawable/icon_groups"
+                android:drawableLeft="@drawable/icon_info"
                 android:drawablePadding="10dp"
                 android:gravity="left"
                 android:padding="10dp"
