--- a/SpikaEnterprise/res/layout/fragment_profile_group.xml
+++ b/SpikaEnterprise/res/layout/fragment_profile_group.xml
@@ -14,6 +14,14 @@
         android:background="@drawable/circle_with_white_border"
         tools:src="@drawable/@drawable/default_user_image" />
 
+    <ProgressBar
+        android:id="@+id/loadingPB"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="115dp"
+        android:visibility="visible" />
+
     <ImageView
         android:id="@+id/addPhoto"
         android:layout_width="wrap_content"
