--- a/SpikaEnterprise/res/layout/sidebar_layout.xml
+++ b/SpikaEnterprise/res/layout/sidebar_layout.xml
@@ -183,7 +183,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/white"/>
+                android:background="@android:color/transparent"/>
         </LinearLayout>
     </ScrollView>
 
