bugovi od yumiko

--- a/SpikaEnterprise/res/layout/fragment_profile.xml
+++ b/SpikaEnterprise/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     android:id="@+id/wholeScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/default_blue">
+    android:background="@color/default_blue" >
 
     <com.clover.spika.enterprise.chat.views.RoundImageView
         android:id="@+id/profileImage"
@@ -13,6 +13,22 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/circle_with_white_border"
         tools:src="@drawable/white_circle" />
+
+    <FrameLayout
+        android:id="@+id/loadingLayout"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_rounded_trans_black" >
+
+        <ProgressBar
+            android:id="@+id/loadingPB"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/addPhoto"
@@ -38,7 +54,7 @@
         android:id="@+id/frameLayoutPasscode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profileName">
+        android:layout_below="@id/profileName" >
 
         <com.clover.spika.enterprise.chat.views.RobotoThinTextView
             android:id="@+id/labelEnablePasscode"
@@ -63,7 +79,6 @@
             android:textOn="On"
             android:thumb="@drawable/spikaenterpriseswitch_switch_inner_holo_light"
             android:track="@drawable/spikaenterpriseswitch_switch_track_holo_light" />
-
     </FrameLayout>
 
     <com.clover.spika.enterprise.chat.views.DetailsScrollView
@@ -83,6 +98,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
         android:visibility="invisible"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
 </RelativeLayout>
