--- a/SpikaEnterprise/res/layout/fragment_profile_group.xml
+++ b/SpikaEnterprise/res/layout/fragment_profile_group.xml
@@ -14,13 +14,21 @@
         android:background="@drawable/circle_with_white_border"
         tools:src="@drawable/@drawable/default_user_image" />
 
-    <ProgressBar
-        android:id="@+id/loadingPB"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <FrameLayout
+        android:id="@+id/loadingLayout"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="115dp"
-        android:visibility="visible" />
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_rounded_trans_black" >
+
+        <ProgressBar
+            android:id="@+id/loadingPB"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/addPhoto"
