--- a/SpikaEnterprise/res/layout/fragment_create_room.xml
+++ b/SpikaEnterprise/res/layout/fragment_create_room.xml
@@ -24,6 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
             android:layout_toEndOf="@+id/img_room"
             android:layout_toRightOf="@+id/img_room"
             android:hint="@string/enterRoomName" />
