edit profile second part

--- a/SpikaEnterprise/res/layout/activity_edit_profile.xml
+++ b/SpikaEnterprise/res/layout/activity_edit_profile.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/title_lobby"
+            android:text="@string/settings"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
         
@@ -41,8 +41,8 @@
 
     </RelativeLayout>
 
-    <FrameLayout
-        android:id="@+id/mainContent"
+    <ListView
+        android:id="@+id/listUserDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/actionBarLayout"
